이미지슬라이스

--- a/src/layout.html
+++ b/src/layout.html
@@ -9,7 +9,7 @@
 		</section>
 		@@include('./include/_footer.html')
 		<!-- loading -->
-		<div class="loading_layer">
+		<!-- <div class="loading_layer">
 			<div class="loading_box_w">
 				<div class="loading_box">
 					<div class="stage">
@@ -18,7 +18,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- // loading -->
 		
 		<script>
