--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -43,7 +43,8 @@ a:hover {text-decoration:underline;}
 .guidelist{padding:8px 0;}
 .guidelist li{padding:2px 10px;}
 .alignleft{text-align:left;padding-left:10px !important;}
-.depth td{background:#7b54ff;color:#fff;text-align:center;font-size:20px;padding:10px;}
+.depth td{background:#7b54ff;color:#fff;text-align:left;font-size:20px;padding:10px 20px !important;}
+.depth2 td{background:#e2dbfb;color:#000;text-align:left;font-size:16px;padding:10px 20px !important;}
 .dev_notice{border-top:1px solid #000;border-bottom:1px solid #000;padding:10px;margin:30px 0;}
 </style>
 <script>
@@ -150,14 +151,14 @@ a:hover {text-decoration:underline;}
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="login.html" target="_blank">Join</a></td>
+					<td class="link"><a href="join.html" target="_blank">Join</a></td>
 					<td class="td_url"></td>
 					<td class="work"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="login.html?message" target="_blank">Join_message</a></td>
+					<td class="link"><a href="join.html?message" target="_blank">Join_message</a></td>
 					<td class="td_url"></td>
 					<td class="work"></td>
 					<td class="bgo"></td>
@@ -194,42 +195,42 @@ a:hover {text-decoration:underline;}
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="policy.html" target="_blank">SUB_01정책제도분석_01차로조회_default</a></td>
+					<td class="link"><a href="policy_01.html" target="_blank">SUB_01정책제도분석_01차로조회_default</a></td>
 					<td class="td_url"></td>
 					<td class="work"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="" target="_blank">SUB_01정책제도분석_01차로조회_GNB</a></td>
+					<td class="link"><a href="policy_01.html?gnb" target="_blank">SUB_01정책제도분석_01차로조회_GNB</a></td>
 					<td class="td_url"></td>
 					<td class="work"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="" target="_blank">SUB_01정책제도분석_01차로조회_hover</a></td>
+					<td class="link"><a href="policy_01.html?hover" target="_blank">SUB_01정책제도분석_01차로조회_hover</a></td>
 					<td class="td_url"></td>
 					<td class="work"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="" target="_blank">SUB_01정책제도분석_01차로조회_결과없음</a></td>
+					<td class="link"><a href="policy_01_way_nodata.html?open" target="_blank">SUB_01정책제도분석_01차로조회_결과없음</a></td>
 					<td class="td_url"></td>
 					<td class="work"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="" target="_blank">SUB_01정책제도분석_01차로조회_click</a></td>
+					<td class="link"><a href="policy_01_way.html?open" target="_blank">SUB_01정책제도분석_01차로조회_click</a></td>
 					<td class="td_url"></td>
 					<td class="work"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="" target="_blank">SUB_01정책제도분석_아이콘NO</a></td>
+					<td class="link"><a href="policy_01_icon_no.html?open" target="_blank">SUB_01정책제도분석_아이콘NO</a></td>
 					<td class="td_url"></td>
 					<td class="work"></td>
 					<td class="bgo"></td>
@@ -239,28 +240,28 @@ a:hover {text-decoration:underline;}
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="" target="_blank">SUB_01정책제도분석_02모빌리티_default</a></td>
+					<td class="link"><a href="policy_02.html" target="_blank">SUB_01정책제도분석_02모빌리티_default</a></td>
 					<td class="td_url"></td>
 					<td class="work"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="" target="_blank">SUB_01정책제도분석_02모빌리티_default2</a></td>
+					<td class="link"><a href="policy_02.html?left" target="_blank">SUB_01정책제도분석_02모빌리티_default2</a></td>
 					<td class="td_url"></td>
 					<td class="work"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="" target="_blank">SUB_01정책제도분석_02모빌리티_결과없음</a></td>
+					<td class="link"><a href="policy_02_nodata.html?open" target="_blank">SUB_01정책제도분석_02모빌리티_결과없음</a></td>
 					<td class="td_url"></td>
 					<td class="work"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="" target="_blank">SUB_01정책제도분석_02모빌리티_graph</a></td>
+					<td class="link"><a href="policy_02_graph.html?open" target="_blank">SUB_01정책제도분석_02모빌리티_graph</a></td>
 					<td class="td_url"></td>
 					<td class="work"></td>
 					<td class="bgo"></td>
