--- a/src/layout.html
+++ b/src/layout.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
 @@include('./include/_head.html')
-<body class="front_body">
+<body class="front_body map_api_body">
 	<div class="page_wrap">
 		@@include('./include/_header.html')
-		<section class="middle_wrap">
+		<section class="map_render_wrap">
 			내용이 들어갑니다.
 		</section>
 		@@include('./include/_footer.html')
-		<!-- loading -->
-		<!-- <div class="loading_layer">
-			<div class="loading_box_w">
-				<div class="loading_box">
-					<div class="stage">
-						<div class="dot-flashing"></div>
-						<p class="loading_para">Loading</p>
-					</div>
-				</div>
-			</div>
-		</div> -->
-		<!-- // loading -->
-		
 		<script>
 			// 퍼블확인용
 			let url = window.location.href.split('?')[1];
