--- a/src/login.html
+++ b/src/login.html
@@ -10,7 +10,7 @@
 					<div class="cform_content_box">
 						<div class="cform_field_item">
 							<h1 class="cform_field_title">
-								<img src="./images/logo_default@2x.png" alt="의사교통지원 TOOL">
+								<img src="./assets/images/logo_default@2x.png" alt="의사교통지원 TOOL">
 							</h1>
 							<div class="cform_field_form">
 								<div class="cform_field_row">
