--- a/src/pw_search_step1.html
+++ b/src/pw_search_step1.html
@@ -48,7 +48,7 @@
 									<tr>
 										<th><label for="formitem_03" class="cform_field_label imp">이름</label></th>
 										<td>
-											<div class="input_component_box">
+											<div class="input_component_box wtype2">
 												<input type="text" class="input_form" placeholder="2~16자 / 국문, 영문" id="formitem_03">
 												<span class="count_wrap">
 													<span class="count_text">0/0</span>
