--- a/src/layout.html
+++ b/src/layout.html
@@ -95,6 +95,14 @@
 			내용이 들어갑니다.
 		</section>
 		<div class="map_bottom_wrap">
+			<div class="map_fold_row">
+				<div class="map_fold_control_row"><a href="javascript:;" class="btn_map_fold_control"><span class="hdtext">열기/닫기</span></span></a></div>
+				<div class="map_fold_content_row">
+					<div class="map_fold_content">
+						내용이 들어갑니다.
+					</div>
+				</div>
+			</div>
 			<div class="map_control_row">
 				<div class="map_control_label_cols">
 					<span class="map_control_label">특정일 시간대 조회</span>
