--- a/src/policy_01_way_nodata.html
+++ b/src/policy_01_way_nodata.html
@@ -117,6 +117,8 @@
 			</div>
 		</div>
 		<script>
+			menuRock("#one_depth_01");
+
 			// 퍼블확인용
 			let url = window.location.href.split('?')[1];
 			let url_2 = url !== undefined ? url.split('#')[0] : null;
