레이아웃 작업중

--- a/src/policy_01_icon_no.html
+++ b/src/policy_01_icon_no.html
@@ -16,8 +16,8 @@
 			</div>
 			<div class="map_render" style="background:#ddd;">
 				<!-- style='개발 확인 및 전달용입니다' -->
-				<a href="#" style="display:inline-block;position:absolute;top:300px;left:500px;"><img src="./images/ic_check_dot@2x.png" style="max-width:34px;" alt=""></a>
-				<a href="#" style="display:inline-block;position:absolute;top:600px;left:200px;"><img src="./images/ic_check_dot@2x.png" style="max-width:34px;" alt=""></a>
+				<a href="#" style="display:inline-block;position:absolute;top:300px;left:500px;"><img src="../assets/images/ic_check_dot@2x.png" style="max-width:34px;" alt=""></a>
+				<a href="#" style="display:inline-block;position:absolute;top:600px;left:200px;"><img src="../assets/images/ic_check_dot@2x.png" style="max-width:34px;" alt=""></a>
 				
 			</div>
 		</section>
