--- a/src/layout2.html
+++ b/src/layout2.html
@@ -9,16 +9,29 @@
 				<div class="cform_content_box_wrap">
 					<div class="cform_content_box">
 						<div class="cform_field_item">
+							내용이 들어갑니다.<br>
+							내용이 들어갑니다.<br>
+							내용이 들어갑니다.<br>
+							내용이 들어갑니다.<br>
+							내용이 들어갑니다.<br>
+							내용이 들어갑니다.<br>
+							내용이 들어갑니다.<br>
+							내용이 들어갑니다.<br>
+							내용이 들어갑니다.<br>
+							내용이 들어갑니다.<br>
+							내용이 들어갑니다.<br>
+							내용이 들어갑니다.<br>
+							내용이 들어갑니다.<br>
 							내용이 들어갑니다.
 						</div>
 					</div>
 					<div class="cform_else_wrap">
 						<ul class="cform_elselogo_list">
-							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./images/logo_mi@2x.png" alt=""></a></li>
-							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./images/logo_kaia@2x.png" alt=""></a></li>
-							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./images/logo_kadif@2x.png" alt=""></a></li>
-							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./images/logo_koti@2x.png" alt=""></a></li>
-							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./images/logo_mqnic@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_mi@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_kaia@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_kadif@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_koti@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_mqnic@2x.png" alt=""></a></li>
 						</ul>
 					</div>
 				</div>
