--- a/src/layout_head_admin.html
+++ b/src/layout_head_admin.html
@@ -1,94 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
-
-<head>
-	<meta charset="utf-8">
-	<meta name="format-detection" content="telephone=no" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=1440" />
-	<link rel="stylesheet" href="./assets/css/common.css" />
-	<script src="./assets/js/jquery-3.4.1.min.js"></script>
-	<script src="./assets/js/dynamicListener.min.js"></script>
-	<script src="./assets/js/swiper.min.js"></script>
-	<script src="./assets/js/tui-date-picker.js"></script>
-	<script src="./assets/js/tui-time-picker.js"></script>
-	<script src="./assets/js/ui.js"></script>
-
-	<title></title>
-</head>
-
+@@include('./include/_head.html')
 <body class="front_body map_api_body">
 	<div class="page_wrap">
-		<header class="header_wrap">
-			<div class="hgroup_main_cols">
-				<h1 class="toplogo"><a href="#" class="toplogo_link"><span class="hdtext">의사교통지원 TOOL</span></a></h1>
-				<nav class="nav_list_wrap">
-					<ul class="nav_list">
-						<li id="one_depth_01">
-							<a href="#" class="nav_oneitem"><span class="nav_oneitem_text">정책 및 제도 분석 서비스</span></a>
-							<div class="nav_twoitem_list_wrap">
-								<ul class="nav_twoitem_list">
-									<li><a href="#" class="nav_twoitem">자율차 서비스 차로 조회</a></li>
-									<li><a href="#" class="nav_twoitem">공유 모빌리티 운행 정보 조회</a></li>
-								</ul>
-							</div>
-						</li>
-						<li id="one_depth_02">
-							<a href="#" class="nav_oneitem"><span class="nav_oneitem_text">교통현황 모니터링</span></a>
-							<div class="nav_twoitem_list_wrap">
-								<ul class="nav_twoitem_list">
-									<li><a href="#" class="nav_twoitem">지표 표출</a></li>
-									<li><a href="#" class="nav_twoitem">모니터링 정보 분석</a></li>
-								</ul>
-							</div>
-						</li>
-						<li id="one_depth_03">
-							<a href="#" class="nav_oneitem"><span class="nav_oneitem_text">혼재기 교통상황 예측</span></a>
-							<div class="nav_twoitem_list_wrap">
-								<ul class="nav_twoitem_list">
-									<li><a href="#" class="nav_twoitem">지표 표출</a></li>
-									<li><a href="#" class="nav_twoitem">모니터링 정보 분석</a></li>
-									<li><a href="#" class="nav_twoitem">Use-case 관리</a></li>
-									<li><a href="#" class="nav_twoitem">Simulation 목록 관리</a></li>
-								</ul>
-							</div>
-						</li>
-					</ul>
-				</nav>
-			</div>
-			<div class="hgroup_sub_cols">
-				<ul class="hgroup_util_list">
-					<li>
-						<div class="hgroup_util_item_wrap">
-							<a href="#" class="hgroup_util_item">user type</a>
-						</div>
-					</li>
-					<li>
-						<div class="hgroup_util_item_wrap">
-							<a href="#" class="hgroup_util_item">admin</a>
-							<div class="hgroup_util_menu_list_wrap">
-								<ul class="hgroup_util_menu_list">
-									<li>
-										<a href="#" class="hgroup_util_menu">
-											<i class="hgroup_util_ico ico_edit"></i>
-											<span class="hgroup_util_text">정보수정</span>
-										</a>
-									</li>
-									<li>
-										<a href="#" class="hgroup_util_menu">
-											<i class="hgroup_util_ico ico_manage"></i>
-											<span class="hgroup_util_text">사용자 관리</span>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</li>
-					<li><a href="#" class="util_ico_menu"><span class="hdtext">로그아웃</span></a></li>
-				</ul>
-			</div>
-			<div class="bg_twonav"></div>
-		</header>
+		@@include('./include/_header.html')
 		<section class="map_render_wrap">
 			<div class="map_render_left_layer">
 				<div class="map_guide_toggle_group">
@@ -177,37 +92,18 @@
 					<li><button type="button" class="map_zoom_item zoomdown"><span class="hdtext">측서</span></button></li>
 				</ul>
 			</div>
-			내용이 들어갑니다.
+			<div class="map_render">
+				<!-- 퍼블 확인용 -->
+				<!-- <iframe class="map_pub_iframe" src="http://vsm.mqnic.com:7654/CACHE/SEJONG.html#15.31/36.485775/127.251423/20/2" frameborder="0" scrolling="no"></iframe> -->
+				<!-- // 퍼블 확인용 -->
+			</div>
 		</section>
 		<div class="map_bottom_wrap">
 			<div class="map_fold_row">
-				<div class="map_fold_control_row"><a href="javascript:;" class="btn_map_fold_control active"><span class="hdtext">열기/닫기</span></span></a></div>
-				<div class="map_fold_content_row" style="display:block;">
+				<div class="map_fold_control_row"><a href="javascript:;" class="btn_map_fold_control"><span class="hdtext">열기/닫기</span></span></a></div>
+				<div class="map_fold_content_row">
 					<div class="map_fold_content">
-						<div class="map_fold_title_row">
-							<div class="map_fold_title_cols">
-								<h3 class="map_fold_data_title">세종병원.서울신학대학교</h3>
-							</div>
-							<div class="map_fold_title_cols">
-								<dl class="map_caption_dl">
-									<dd><span clas="map_caption_value">12065</span></dd>
-								</dl>
-							</div>
-						</div>
-						<div class="map_fold_content_row">
-							<div class="chart_title_flex_wrap">
-								<div class="chart_title_flex_cols">
-									<p class="chart_map_title">정류소 이용 현황</p>
-								</div>
-							</div>
-							<div class="chart_content_flex_wrap">
-								<div class="chart_content_flex_cols">
-									<div class="nodata_guide_wrap">
-										<p class="nodata_guide">조회 결과가 없습니다.</p>
-									</div>
-								</div>
-							</div>
-						</div>
+						내용이 들어갑니다.
 					</div>
 				</div>
 			</div>
@@ -253,14 +149,34 @@
 		<script>
 			menuRock("#one_depth_01");
 
+			var datepicker = new tui.DatePicker('#map_date_render', {
+				date: new Date(),
+				input: {
+					element: '#datepicker-input',
+					format: 'yyyy-MM-dd'
+				}
+			});
+
+			var tpSelectbox = new tui.TimePicker('#timepicker-selectbox', {
+				initialHour: 15,
+                inputType: 'selectbox',
+                showMeridiem: false
+            });
+
+			var tpSelectbox = new tui.TimePicker('#timepicker-selectbox2', {
+                initialHour: 3,
+                initialMinute: 3,
+                inputType: 'selectbox',
+                showMeridiem: false
+            });
+			
 			// 퍼블확인용
 			let url = window.location.href.split('?')[1];
 			let url_2 = url !== undefined ? url.split('#')[0] : null;
-			if (url_2 === "loading") {
+			if(url_2 === "loading"){
 				document.querySelector(".loading_layer").classList.add("active");
 			}
 		</script>
 	</div>
 </body>
-
 </html>
