레이아웃 작업 가이드 맵

--- a/src/layout.html
+++ b/src/layout.html
@@ -169,6 +169,9 @@
                 inputType: 'selectbox',
                 showMeridiem: false
             });
+
+			// api guide
+			renderApi();
 			
 			// 퍼블확인용
 			let url = window.location.href.split('?')[1];
