페이지 작업진행중

--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -102,7 +102,7 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="layout.html" target="_blank">레이아웃 샘플</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
@@ -119,13 +119,13 @@ a:hover {text-decoration:underline;}
 					<td class="work ing"></td>
 					<td class="bgo"></td>
 				</tr>
-				<tr>
+				<!-- <tr>
 					<td class="no"></td>
 					<td class="link"><a href="modal.html" target="_blank">modal 샘플</a></td>
 					<td class="td_url"></td>
 					<td class="work ing"></td>
 					<td class="bgo"></td>
-				</tr>
+				</tr> -->
 				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="dialogue.html" target="_blank">dialogue 샘플</a></td>
@@ -211,22 +211,22 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="policy_01.html" target="_blank">SUB_01정책제도분석_01차로조회_default</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="policy_01.html?gnb" target="_blank">SUB_01정책제도분석_01차로조회_GNB</a></td>
+					<td class="link"><a href="policy_01.html" target="_blank">SUB_01정책제도분석_01차로조회_GNB</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
-					<td class="bgo"></td>
+					<td class="work end"></td>
+					<td class="bgo">gnb 마우스 오버시</td>
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="policy_01.html?hover" target="_blank">SUB_01정책제도분석_01차로조회_hover</a></td>
+					<td class="link"><a href="policy_01.html" target="_blank">SUB_01정책제도분석_01차로조회_hover</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
-					<td class="bgo"></td>
+					<td class="work end"></td>
+					<td class="bgo">맵 영역 박스 전달</td>
 				</tr>
 				<tr>
 					<td class="no"></td>
@@ -244,9 +244,9 @@ a:hover {text-decoration:underline;}
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="policy_01_icon_no.html?open" target="_blank">SUB_01정책제도분석_아이콘NO</a></td>
+					<td class="link"><a href="policy_01_icon_no.html" target="_blank">SUB_01정책제도분석_아이콘NO</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr class="depth2">
@@ -256,15 +256,15 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="policy_02.html" target="_blank">SUB_01정책제도분석_02모빌리티_default</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
-					<td class="link"><a href="policy_02.html?left" target="_blank">SUB_01정책제도분석_02모빌리티_default2</a></td>
+					<td class="link"><a href="policy_02.html" target="_blank">SUB_01정책제도분석_02모빌리티_default2</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
-					<td class="bgo"></td>
+					<td class="work end"></td>
+					<td class="bgo">왼쪽 클릭시 확인 가능</td>
 				</tr>
 				<tr>
 					<td class="no"></td>
