--- a/src/policy_02.html
+++ b/src/policy_02.html
@@ -92,7 +92,11 @@
 					<li><button type="button" class="map_zoom_item zoomdown"><span class="hdtext">측서</span></button></li>
 				</ul>
 			</div>
-			내용이 들어갑니다.
+			<div class="map_render">
+				<!-- 퍼블 확인용 -->
+				<!-- <iframe class="map_pub_iframe" src="http://vsm.mqnic.com:7654/CACHE/SEJONG.html#15.31/36.485775/127.251423/20/2" frameborder="0" scrolling="no"></iframe> -->
+				<!-- // 퍼블 확인용 -->
+			</div>
 		</section>
 		<div class="map_bottom_wrap">
 			<div class="map_fold_row">
@@ -114,10 +118,10 @@
 								<div class="map_control_comp_thcols"><span class="map_clabel_fxwrap ico_date"><span class="map_clabel_fxtext">날짜선택</span></span></div>
 								<div class="map_control_comp_tdcols">
 									<div class="tui-datepicker-input tui-datetime-input tui-has-focus" value="2023-07-19">
-										<input type="text" id="datepicker-input" aria-label="Date-Time">
+										<input type="text" id="datepicker-input" aria-label="Date-Time" class="input_tui_calendar">
 										<span class="tui-ico-date"></span>
 									</div>
-									<div id="map_date_render" class="ui_picker_render"></div>
+									<div id="map_date_render" class="ui_picker_render reverse_render"></div>
 								</div>
 							</div>
 						</li>
@@ -127,11 +131,53 @@
 								<div class="map_control_comp_tdcols">
 									<ul class="hor_form_list">
 										<li>
-											<div id="timepicker-selectbox" class="time_picker_item"></div>
+											<div class="combo_item reverse_item" id="select_combo_start">
+												<a href="javascript:;" class="combo_target">00:00</a>
+												<div class="combo_option_group reverse_pos">
+													<div class="combo_option_scroll" data-rowCount="10">
+														<ul class="combo_option_list">
+															<li><a href="javascript:;" data-value="option_0" class="combo_option">00:00</a></li>
+															<li><a href="javascript:;" data-value="option_1" class="combo_option">01:00</a></li>
+															<li><a href="javascript:;" data-value="option_2" class="combo_option">02:00</a></li>
+															<li><a href="javascript:;" data-value="option_3" class="combo_option">03:00</a></li>
+															<li><a href="javascript:;" data-value="option_4" class="combo_option">04:00</a></li>
+															<li><a href="javascript:;" data-value="option_5" class="combo_option">05:00</a></li>
+															<li><a href="javascript:;" data-value="option_6" class="combo_option">06:00</a></li>
+															<li><a href="javascript:;" data-value="option_7" class="combo_option">07:00</a></li>
+															<li><a href="javascript:;" data-value="option_8" class="combo_option">08:00</a></li>
+															<li><a href="javascript:;" data-value="option_9" class="combo_option">09:00</a></li>
+															<li><a href="javascript:;" data-value="option_10" class="combo_option">10:00</a></li>
+															<li><a href="javascript:;" data-value="option_11" class="combo_option">11:00</a></li>
+															<li><a href="javascript:;" data-value="option_12" class="combo_option">12:00</a></li>
+														</ul>
+													</div>
+												</div>
+											</div>
 										</li>
 										<li class="short"><span class="short_else">~</span></li>
 										<li>
-											<div id="timepicker-selectbox2" class="time_picker_item"></div>
+											<div class="combo_item reverse_item" id="select_combo_end">
+												<a href="javascript:;" class="combo_target">11:00</a>
+												<div class="combo_option_group reverse_pos">
+													<div class="combo_option_scroll" data-rowCount="10">
+														<ul class="combo_option_list">
+															<li><a href="javascript:;" data-value="option_0" class="combo_option">00:00</a></li>
+															<li><a href="javascript:;" data-value="option_1" class="combo_option">01:00</a></li>
+															<li><a href="javascript:;" data-value="option_2" class="combo_option">02:00</a></li>
+															<li><a href="javascript:;" data-value="option_3" class="combo_option">03:00</a></li>
+															<li><a href="javascript:;" data-value="option_4" class="combo_option">04:00</a></li>
+															<li><a href="javascript:;" data-value="option_5" class="combo_option">05:00</a></li>
+															<li><a href="javascript:;" data-value="option_6" class="combo_option">06:00</a></li>
+															<li><a href="javascript:;" data-value="option_7" class="combo_option">07:00</a></li>
+															<li><a href="javascript:;" data-value="option_8" class="combo_option">08:00</a></li>
+															<li><a href="javascript:;" data-value="option_9" class="combo_option">09:00</a></li>
+															<li><a href="javascript:;" data-value="option_10" class="combo_option">10:00</a></li>
+															<li><a href="javascript:;" data-value="option_11" class="combo_option">11:00</a></li>
+															<li><a href="javascript:;" data-value="option_12" class="combo_option">12:00</a></li>
+														</ul>
+													</div>
+												</div>
+											</div>
 										</li>
 									</ul>
 								</div>
@@ -145,6 +191,32 @@
 		<script>
 			menuRock("#one_depth_01");
 
+			//combo callback
+			comboChangeCallback({
+				target: "select_combo_start",
+				callback(value) {
+					console.log(value);
+				}
+			});
+			comboChangeCallback({
+				target: "select_combo_end",
+				callback(value) {
+					console.log(value);
+				}
+			});
+
+
+			var datepicker = new tui.DatePicker('#map_date_render', {
+				date: new Date(),
+				language: 'ko',
+				input: {
+					element: '#datepicker-input',
+					format: 'yyyy-MM-dd'
+				}
+			});
+			// api guide
+			renderApi();
+			
 			// 퍼블확인용
 			let url = window.location.href.split('?')[1];
 			let url_2 = url !== undefined ? url.split('#')[0] : null;
