로그인 진행중

--- a/src/login.html
+++ b/src/login.html
@@ -8,9 +8,9 @@
 			<div class="cform_content_wrap">
 				<div class="cform_content_box_wrap">
 					<div class="cform_content_box">
-						<div class="cform_field_item">
+						<div class="cform_field_item type2">
 							<h1 class="cform_field_title">
-								<img src="./assets/images/logo_default@2x.png" alt="의사교통지원 TOOL">
+								<img src="./assets/images/logo_default@2x.png" class="cform_logo" alt="의사교통지원 TOOL">
 							</h1>
 							<div class="cform_field_form">
 								<div class="cform_field_row">
@@ -41,7 +41,7 @@
 								</div>
 							</div>
 							<div class="cform_btn_primary_row">
-								<a href="#" class="btn_box primary"><span class="btn_box_text">로그인</span></a>
+								<a href="#" class="btn_formbox_submit"><span class="btn_formbox_submit_text">로그인</span></a>
 							</div>
 							<ul class="cform_other_list">
 								<li><a href="#" class="btn_cform_other">비밀번호 찾기</a></li>
@@ -62,11 +62,11 @@
 					</div>
 					<div class="cform_else_wrap">
 						<ul class="cform_elselogo_list">
-							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="../assets/images/logo_mi@2x.png" alt=""></a></li>
-							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="../assets/images/logo_kaia@2x.png" alt=""></a></li>
-							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="../assets/images/logo_kadif@2x.png" alt=""></a></li>
-							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="../assets/images/logo_koti@2x.png" alt=""></a></li>
-							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="../assets/images/logo_mqnic@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_mi@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_kaia@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_kadif@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_koti@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_mqnic@2x.png" alt=""></a></li>
 						</ul>
 					</div>
 				</div>
