로그인 완료

--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -150,14 +150,14 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="login.html" target="_blank">Login</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="login.html?message" target="_blank">Login_message</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr class="depth2">
@@ -167,14 +167,14 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="join.html" target="_blank">Join</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="join.html?message" target="_blank">Join_message</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr class="depth2">
@@ -184,21 +184,21 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="pw_search_step1.html" target="_blank">pw_search_step1</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="pw_search_step1.html?message" target="_blank">pw_search_step1_message</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr>
 					<td class="no"></td>
 					<td class="link"><a href="pw_search_step2.html" target="_blank">pw_search_step2</a></td>
 					<td class="td_url"></td>
-					<td class="work"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr class="depth">
