--- a/src/pw_search_step2.html
+++ b/src/pw_search_step2.html
@@ -20,7 +20,7 @@
 										<td>
 											<div class="td_blockitem">
 												<div class="input_component_box">
-													<input type="password" class="input_form" placeholder="8~16자 / 영문+숫자+특수기호 조합" id="formitem_01">
+													<input type="password" class="input_origin_item" placeholder="8~16자 / 영문+숫자+특수기호 조합" id="formitem_01">
 													<span class="count_wrap">
 														<span class="count_text">0/0</span>
 													</span>
@@ -32,7 +32,7 @@
 											</div>
 											<div class="td_blockitem">
 												<div class="input_component_box">
-													<input type="password" class="input_form" placeholder="비밀번호 확인">
+													<input type="password" class="input_origin_item" placeholder="비밀번호 확인">
 													<span class="count_wrap">
 														<span class="count_text">0/0</span>
 													</span>
@@ -47,7 +47,7 @@
 								</table>
 							</div>
 							<div class="cform_btn_primary_row">
-								<a href="#" class="btn_box primary"><span class="btn_box_text">완료</span></a>
+								<a href="#" class="btn_formbox_submit"><span class="btn_formbox_submit_text">완료</span></a>
 							</div>
 							<ul class="cform_other_list">
 								<li><a href="#" class="btn_cform_other">로그인하기</a></li>
