--- a/src/join.html
+++ b/src/join.html
@@ -19,7 +19,7 @@
 										<th><label for="formitem_01" class="cform_field_label imp">아이디</label></th>
 										<td>
 											<div class="input_component_box">
-												<input type="text" class="input_form" placeholder="4~8자/ 국문, 영문, 숫자" id="formitem_01">
+												<input type="text" class="input_origin_item" placeholder="4~8자/ 국문, 영문, 숫자" id="formitem_01">
 												<span class="count_wrap">
 													<span class="count_text">0/0</span>
 												</span>
@@ -34,7 +34,7 @@
 										<th><label for="formitem_02" class="cform_field_label imp">이메일</label></th>
 										<td>
 											<div class="input_component_box">
-												<input type="text" class="input_form" placeholder="ex) abc@abc.com" id="formitem_02">
+												<input type="text" class="input_origin_item" placeholder="ex) abc@abc.com" id="formitem_02">
 												<span class="count_wrap">
 													<span class="count_text">0/0</span>
 												</span>
@@ -49,7 +49,7 @@
 										<th><label for="formitem_03" class="cform_field_label imp">이름</label></th>
 										<td>
 											<div class="input_component_box">
-												<input type="text" class="input_form" placeholder="2~16자 / 국문, 영문" id="formitem_03">
+												<input type="text" class="input_origin_item" placeholder="2~16자 / 국문, 영문" id="formitem_03">
 												<span class="count_wrap">
 													<span class="count_text">0/0</span>
 												</span>
@@ -64,7 +64,7 @@
 										<th><label for="formitem_04" class="cform_field_label imp">전화번호</label></th>
 										<td>
 											<div class="input_component_box">
-												<input type="text" class="input_form" placeholder="9~11자 / ‘-’없이 입력" id="formitem_04">
+												<input type="text" class="input_origin_item" placeholder="9~11자 / ‘-’없이 입력" id="formitem_04">
 												<span class="count_wrap">
 													<span class="count_text">0/0</span>
 												</span>
@@ -79,7 +79,7 @@
 										<th><label for="formitem_05" class="cform_field_label imp">소속</label></th>
 										<td>
 											<div class="input_component_box">
-												<input type="text" class="input_form" placeholder="소속업체명" id="formitem_05">
+												<input type="text" class="input_origin_item" placeholder="소속업체명" id="formitem_05">
 												<span class="count_wrap">
 													<span class="count_text">0/0</span>
 												</span>
@@ -95,7 +95,7 @@
 										<td>
 											<div class="td_blockitem">
 												<div class="input_component_box">
-													<input type="password" class="input_form" placeholder="8~16자 / 영문+숫자+특수기호 조합" id="formitem_06">
+													<input type="password" class="input_origin_item" placeholder="8~16자 / 영문+숫자+특수기호 조합" id="formitem_06">
 													<span class="count_wrap">
 														<span class="count_text">0/0</span>
 													</span>
@@ -107,7 +107,7 @@
 											</div>
 											<div class="td_blockitem">
 												<div class="input_component_box">
-													<input type="password" class="input_form" placeholder="비밀번호 확인">
+													<input type="password" class="input_origin_item" placeholder="비밀번호 확인">
 													<span class="count_wrap">
 														<span class="count_text">0/0</span>
 													</span>
@@ -122,8 +122,8 @@
 								</table>
 							</div>
 							<div class="cform_btn_primary_row">
-								<a href="#" class="btn_box"><span class="btn_box_text">취소</span></a>
-								<a href="#" class="btn_box primary"><span class="btn_box_text">가입</span></a>
+								<a href="#" class="btn_formbox_submit else"><span class="btn_formbox_submit_text">취소</span></a>
+								<a href="#" class="btn_formbox_submit"><span class="btn_formbox_submit_text">가입</span></a>
 							</div>
 						</div>
 					</div>
@@ -144,8 +144,15 @@
 			// 퍼블확인용
 			let url = window.location.href.split('?')[1];
 			let url_2 = url !== undefined ? url.split('#')[0] : null;
-			if(url_2 === "loading"){
-				document.querySelector(".loading_layer").classList.add("active");
+			if(url_2 === "message"){
+				document.querySelectorAll(".form_each_message_group").forEach((item)=>{
+					item.classList.add("active");
+				});
+				// warn
+				document.querySelectorAll(".input_component_box").forEach((item)=>{
+					item.classList.add("warn");
+					item.classList.add("focus");
+				});
 			}
 		</script>
 	</div>
